修复新增品牌不刷新列表

--- a/src/global.less
+++ b/src/global.less
@@ -166,6 +166,9 @@ ol {
     }
   }
 }
+.ant-pro-basicLayout-content .ant-pro-page-header-wrap{
+  margin: 0 !important
+}
 
 // 兼容IE11
 @media screen and(-ms-high-contrast: active),
