--- a/src/global.less
+++ b/src/global.less
@@ -142,6 +142,11 @@ ol {
   margin-bottom: 24px !important;
 }
 
+
+.pointer{
+  cursor: pointer
+}
+
 .btn-green {
   background-color: #52C41A !important;
   border-color: #52C41A !important;
