Popconfirm  修改提示过长

--- a/src/pages/personalManage/components/TableList/index.css
+++ b/src/pages/personalManage/components/TableList/index.css
@@ -1,3 +1,8 @@
 .container :global #components-catalog-table-wrap .ant-table-row-level-1 {
   background-color: #f9f9f9;
 }
+
+
+.ant-popover-content{
+  white-space: pre-line;
+}
