--- a/src/global.less
+++ b/src/global.less
@@ -101,6 +101,14 @@ ol {
   color: #05a014 !important;
 }
 
+.font-pending {
+  color: #1890ff !important;
+}
+
+.font-danger {
+  color: #ff4d4f !important;
+}
+
 .font-underline {
   text-decoration: underline !important;
 }
