--- a/src/global.less
+++ b/src/global.less
@@ -69,6 +69,10 @@ ol {
   color: #1890ff !important;
 }
 
+.font-success {
+  color: #52C41A c !important;
+}
+
 .font-size-12{
   font-size: 12px !important;
 }
