--- a/src/global.less
+++ b/src/global.less
@@ -29,12 +29,14 @@ ol {
   list-style: none;
 }
 
-.text-center{
+.text-center {
   text-align: center !important;
 }
-.text-right{
+
+.text-right {
   text-align: right !important;
 }
+
 .inline {
   &::before {
     content: '';
@@ -56,7 +58,8 @@ ol {
 
 .inline-block {
   display: inline-block !important;
-  &.top{
+
+  &.top {
     vertical-align: top !important;
   }
 }
@@ -70,35 +73,36 @@ ol {
 }
 
 .font-success {
-  color: #52C41A c !important;
+  color: #52C41A !important;
 }
 
-.font-size-12{
+.font-size-12 {
   font-size: 12px !important;
 }
-.font-size-16{
+
+.font-size-16 {
   font-size: 16px !important;
 }
 
-.font-size-18{
+.font-size-18 {
   font-size: 18px !important;
 }
 
-.font-size-20{
+.font-size-20 {
   font-size: 20px !important;
 }
 
-.font-size-22{
+.font-size-22 {
   font-size: 22px !important;
 }
 
-.font-size-24{
+.font-size-24 {
   font-size: 24px !important;
 }
 
-.disabled{
+.disabled {
   cursor: not-allowed !important;
-  color: rgba(0,0,0,.25) !important;
+  color: rgba(0, 0, 0, .25) !important;
 }
 
 .font-green {
@@ -158,7 +162,7 @@ ol {
 }
 
 
-.pointer{
+.pointer {
   cursor: pointer
 }
 
@@ -186,13 +190,14 @@ ol {
     }
   }
 }
-.ant-pro-basicLayout-content .ant-pro-page-header-wrap{
+
+.ant-pro-basicLayout-content .ant-pro-page-header-wrap {
   margin: 0 !important
 }
 
 
-.personal-edit-form{
-  .ant-form-item-label > label{
+.personal-edit-form {
+  .ant-form-item-label>label {
     width: 84px;
     justify-content: flex-end;
   }
