--- a/src/pages/agentManage/agentLevelOne/index.less
+++ b/src/pages/agentManage/agentLevelOne/index.less
@@ -7,12 +7,15 @@
       width: 100%;
       .inp{
         width: 150px;
-        margin:0 20px;
         text-align: left;
       }
       .sub{
         text-align: center;
         margin-left: 20px;
+      }
+      .searchBoxItem{
+        display: inline-block;
+        margin-right: 40px;
       }
     }
     .addAgentBox{
