--- a/src/pages/agentManage/agentLevelOne/index.less
+++ b/src/pages/agentManage/agentLevelOne/index.less
@@ -2,8 +2,8 @@
 .agentLevelOneMain{
   margin-top: 20px;
     .searchBox{
-      display: flex;
-      flex-direction: row;
+      //display: flex;
+      //flex-direction: row;
       width: 100%;
       .inp{
         width: 150px;
@@ -16,6 +16,7 @@
       .searchBoxItem{
         display: inline-block;
         margin-right: 40px;
+        margin-top: 10px;
       }
     }
     .addAgentBox{
