--- a/src/global.less
+++ b/src/global.less
@@ -76,6 +76,10 @@ ol {
   color: #52C41A !important;
 }
 
+.link-a {
+  color: #1890ff !important;
+}
+
 .font-size-12 {
   font-size: 12px !important;
 }
