--- a/src/pages/personalManage/components/Add/index.less
+++ b/src/pages/personalManage/components/Add/index.less
@@ -8,3 +8,12 @@
   background-color: #f5f5f5;
 }
 
+
+
+.red{
+  background-color: #fff2f0;
+}
+
+.ant-table-tbody > tr.ant-table-row:hover > td{
+  background-color: transparent;
+}
