--- a/src/global.less
+++ b/src/global.less
@@ -215,11 +215,17 @@ ol {
   }
 }
 
-.mt-top_15{
+.mt-top_15 {
   margin-top: -15px;
 }
 
 
-.mb_15{
-  margin-bottom:-5px!important;
+.mb_15 {
+  margin-bottom: -5px !important;
+}
+
+.collapse{
+  .ant-collapse-header{
+      padding: 12px 0!important;
+  }
 }
