--- a/src/global.less
+++ b/src/global.less
@@ -224,8 +224,26 @@ ol {
   margin-bottom: -5px !important;
 }
 
-.collapse{
-  .ant-collapse-header{
-      padding: 12px 0!important;
+.collapse {
+  .ant-collapse-header {
+    padding: 12px 0 !important;
+  }
+}
+
+.mains {
+  width: 100%;
+  background: #fff;
+  .ant-pro-page-header-wrap-children-content {
+    margin: 0 24px !important;
+  }
+}
+
+.descriptions-layout {
+  .ant-descriptions-item {
+    display: flex;
+  }
+
+  .ant-descriptions-item>span {
+    display: block;
   }
 }
