--- a/src/global.less
+++ b/src/global.less
@@ -236,6 +236,11 @@ ol {
   .ant-pro-page-header-wrap-children-content {
     margin: 0 24px !important;
   }
+
+  .ant-collapse-content-box{
+    height: 306px;
+    overflow-y: auto;
+  }
 }
 
 .descriptions-layout {
@@ -246,4 +251,8 @@ ol {
   .ant-descriptions-item>span {
     display: block;
   }
+}
+
+.cur{
+  cursor: pointer;
 }
