--- a/src/pages/SnApprove/detail/index.less
+++ b/src/pages/SnApprove/detail/index.less
@@ -35,3 +35,18 @@
 .title span {
   margin-right: 30px;
 }
+
+
+.collapse{
+  margin-top: 16px;
+
+  .collapseTitle{
+    padding: 20px 16px;
+    background-color: #fafafa;
+    border: 1px solid #d9d9d9;
+    border-bottom: 0;
+    border-radius: 5px 5px 0 0;
+    font-size: 16px;
+    color: #333333;
+  }
+}
