--- a/src/global.less
+++ b/src/global.less
@@ -233,11 +233,12 @@ ol {
 .mains {
   width: 100%;
   background: #fff;
+
   .ant-pro-page-header-wrap-children-content {
     margin: 0 24px !important;
   }
 
-  .ant-collapse-content-box{
+  .ant-collapse-content-box {
     height: 306px;
     overflow-y: auto;
   }
@@ -253,6 +254,20 @@ ol {
   }
 }
 
-.cur{
+.cur {
   cursor: pointer;
+}
+
+
+
+.ant-tree-list-holder-inner {
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+
+.ant-tree .ant-tree-treenode {
+  width: 100%;
+  position: relative;
+
 }
