--- a/src/global.less
+++ b/src/global.less
@@ -78,6 +78,7 @@ ol {
 
 .link-a {
   color: #1890ff !important;
+  cursor: pointer;
 }
 
 .font-size-12 {
@@ -239,7 +240,7 @@ ol {
   }
 
   .ant-collapse-content-box {
-    height: 306px;
+    max-height: 306px;
     overflow-y: auto;
   }
 }
@@ -269,5 +270,13 @@ ol {
 .ant-tree .ant-tree-treenode {
   width: 100%;
   position: relative;
+}
 
+.cur-not{
+  cursor: no-drop;
+  opacity: 0.5;
+}
+
+.pb-16{
+  padding-bottom: 16px;
 }
