--- a/src/global.less
+++ b/src/global.less
@@ -76,6 +76,11 @@ ol {
   color: #52C41A !important;
 }
 
+.font-yellow {
+  color: #faad14 !important;
+}
+
+
 .link-a {
   color: #1890ff !important;
   cursor: pointer;
@@ -164,6 +169,9 @@ ol {
 
 .mb-24 {
   margin-bottom: 24px !important;
+}
+.ml-8{
+  margin-left: 8px!important;
 }
 
 
@@ -279,4 +287,8 @@ ol {
 
 .pb-16{
   padding-bottom: 16px;
+}
+
+.w-150{
+  width: 150px;
 }
