--- a/src/pages/agentManage/agentLevelOne/add/add.less
+++ b/src/pages/agentManage/agentLevelOne/add/add.less
@@ -1,22 +1,28 @@
 @import '~antd/es/style/themes/default.less';
 
-.addInpInLine{
+.addInpInLine {
   width: 100%;
   margin: 15px 0;
-  .addInp{
+
+  .addInp {
     width: 48%;
     float: left;
   }
-  .addInp2{
+
+  .addInp2 {
     float: right;
+    width: 45%;
   }
 }
-.addInpAddress{
+
+.addInpAddress {
   margin-top: 15px
 }
-.addInpAgentBrand{
+
+.addInpAgentBrand {
   margin-top: 15px
 }
-.addSubBtn{
+
+.addSubBtn {
   margin-top: 15px
 }
