重构商户管理

--- a/src/global.less
+++ b/src/global.less
@@ -170,8 +170,9 @@ ol {
 .mb-24 {
   margin-bottom: 24px !important;
 }
-.ml-8{
-  margin-left: 8px!important;
+
+.ml-8 {
+  margin-left: 8px !important;
 }
 
 
@@ -280,15 +281,20 @@ ol {
   position: relative;
 }
 
-.cur-not{
+.cur-not {
   cursor: no-drop;
   opacity: 0.5;
 }
 
-.pb-16{
+.pb-16 {
   padding-bottom: 16px;
 }
 
-.w-150{
+.w-150 {
   width: 150px;
+}
+
+.context-end {
+  display: flex;
+  justify-content: flex-end;
 }
