--- a/src/global.less
+++ b/src/global.less
@@ -76,6 +76,10 @@ ol {
   color: #52C41A !important;
 }
 
+.font-green {
+  color: #52C41A !important;
+}
+
 .font-yellow {
   color: #faad14 !important;
 }
@@ -302,4 +306,13 @@ ol {
 
 .ant-table-cell .ant-btn:first-of-type {
   padding: 4px 15px 4px 0 !important;
+}
+
+
+.ele-center{
+  text-align: center;
+
+  .ant-btn{
+    margin-right: 10px;
+  }
 }
